Update header styling, fix overlap issues, add to search placeholder, add home icon to reroute to homepage instead of main logo.

--- a/web/src/styles/components/homepage.scss
+++ b/web/src/styles/components/homepage.scss
@@ -19,7 +19,8 @@ header {
     z-index: 1000;
     transition: 0.6s;
     background-color: #1A2852;
-    border: 2px solid black;
+    min-height: 8vh;
+    align-content: center;
 }
 
 .container {
@@ -27,6 +28,29 @@ header {
     justify-content: space-between;
     align-items: center;
     color: #1A2852;
+}
+
+.home-button {
+    width: 60px;
+    max-height: 33px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1A2852;
+    padding: 10px;
+    margin-right: 10px;
+}
+
+.home-button img {
+    width: 100%;
+    height: 100%;
+    background-color: #1A2852;
+    display: block;
+}
+
+.home-button img:hover {
+    cursor: pointer;
+    
 }
 
 .logo-box {
@@ -42,20 +66,11 @@ header {
     max-height: 100%;
 }
 
-.logo-box button {
-    background-color: #1A2852;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.logo-box button:hover {
-    background-color: #243463;
-}
-
 .search-bar-box {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    align-self: center;
     flex-grow: 1;
     padding: 0 10px;
     color: white;
